<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profileLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/ui_profile_photo_title"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <ImageView
                android:id="@+id/imageProfile"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:src="@drawable/myruns4"
                android:focusable="true"
                android:focusableInTouchMode="true" >
                <requestFocus />
            </ImageView>

            <Button
                android:id="@+id/btnChangePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:textSize="15sp"
                android:onClick="onChangePhotoClicked"
                android:text="@string/profile_change_button" >
            </Button>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/profile_name_title"/>

        <EditText
            android:id="@+id/profileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_name_hint"
            android:layout_margin="5dp"
            android:inputType="textCapWords"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/profile_email_title"/>

        <EditText
            android:id="@+id/profileEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_email_hint"
            android:layout_margin="5dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/profile_phone_title"/>

        <EditText
            android:id="@+id/profilePhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_phone_hint"
            android:layout_margin="5dp"
            android:inputType="phone"
            android:maxLines="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/profile_gender_title"/>

        <RadioGroup
            android:id="@+id/profileGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp">

            <RadioButton
                android:id="@+id/profileGenderFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_gender_female"/>

            <RadioButton
                android:id="@+id/profileGenderMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_gender_male"/>

        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/profile_class_title"/>

        <EditText
            android:id="@+id/profileClass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_class_hint"
            android:layout_margin="5dp"
            android:inputType="number"
            android:maxLines="1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/profile_major_title"/>

        <EditText
            android:id="@+id/profileMajor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_major_hint"
            android:layout_margin="5dp"
            android:inputType="textCapWords"
            android:maxLines="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/profileSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="40dp"
                android:text="@string/profile_save_button"
                android:onClick="onSaveClicked"
                android:textSize="15sp"/>

            <Button
                android:id="@+id/profileCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_cancel_button"
                android:layout_marginEnd="40dp"
                android:onClick="onCancelClicked"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
